--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "db": "json-server --watch ./db/db.accounts.json --port 3001",
+    "dev": "concurrently \"npm run db\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": [
