--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "db": "json-server --watch ./db/db.accounts.json --port 3001",
+    "db": "npx json-server --watch ./db/db.accounts.json --port 3001",
     "dev": "concurrently \"npm run db\" \"npm run start\""
   },
   "eslintConfig": {
