--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,26 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
-/dist
-/gzipped
-/tmp
-/out-tsc
-/storybook-static
-/docs
-/tests/kendo-themes/tests/visual/styles
-/cypress
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# testing
+/coverage
 
-# IDE - VSCode
-.vscode/*
+# production
+/build
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-/.favorites.json
-
-# System Files
 .DS_Store
-Thumbs.db
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-lintreport.json
-report.*.json
-/.vs
-report.*.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Local configuration
-/apps/portal-web/src/assets/env/local/*
-/apps/thirdparty-web/src/assets/env/local/*
-*.log
 
-# Versioning file
-version.ts
-/.scannerwork/
-
-# YARN v2
-.yarn/*
-!.yarn/patches
-!.yarn/releases
-!.yarn/plugins
-!.yarn/sdks
-!.yarn/versions
-.pnp.*
+client/node_modules
